# server-monitor

./: .env.example  .gitignore  .lighthouserc.js  AGENTS.md  API-TESTING-GUIDE.txt  ARCHITECTURE.md  CHANGELOG-V4.txt  CHANGELOG.md  CHANGELOG_v1.0.md  CLAUDE.md  CONTRIBUTING.md  CREATE_GITHUB_RELEASE_v2.4.0-rc1.md  CUSTOM-DOMAIN-GUIDE.md  DEPLOYMENT.md  DEVELOPMENT-COMPLETION-SUMMARY.md  E2E_TESTING_IMPLEMENTATION_REPORT.md  ENTERPRISE_ROADMAP.md  FEATURES-TEST-REPORT.md  FINAL_COMPLETION_REPORT.md  GITHUB_README.md  HTTPS-SETUP.md  HUONG_DAN_TIENG_VIET.md  IMPLEMENTATION_DEV_IMPROVEMENTS.md  IMPLEMENTATION_REPORT_V4.1.md  INSTALL.txt  LICENSE  MANUAL_TESTING_CHECKLIST.md  MULTI-SERVER-GUIDE.md  NGINX_PROXY_GUIDE.md  OFFLINE_MODE.md  PHASE6_COMPLETION_SUMMARY.md  POST-PRODUCTION.md  PROJECT_ASSESSMENT.md  QUICKSTART.txt  QUICK_START_CORS_FIX.md  README-DEV.md  README.md  RELEASE_COMPLETE_v2.4.0.md  RELEASE_NOTES_v2.1.0.md  RELEASE_NOTES_v2.4.0-rc1.md  (+25 more)
automation/: .gitignore  README.md
backend/: .env.example  agent.py  alert_manager.py  audit_cleanup.py  cache_helper.py  central_api.py  crypto_vault.py  database.py  database_manager.py  email_alerts.py  event_model.py  inventory_collector.py  observability.py  plugin_system.py  rate_limiter.py  requirements.txt  security.py  server_dashboard_api_v2.py  settings_manager.py  slack_integration.py  ssh_key_manager.py  ssh_manager.py  startup_validation.py  status_webserver.py  task_policy.py  task_recovery.py  task_runner.py  telegram_bot.py  terminal.py  user_management.py  webhook_dispatcher.py  websocket_server.py
docs/: CI_CD_STABILIZATION_SUMMARY.md  CI_WORKFLOWS.md  DOCUMENTATION_STANDARDIZATION_REPORT.md  FULL_REVIEW_GUIDE.md  I18N_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALLER.md  MANUAL_REVIEW_WORKFLOW_GUIDE.md  PHASE4_MODULE1_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_SPECIFICATION.md  README.md  RELEASE_PROCESS.md  REVIEW_REPORT.md  REVIEW_REPORT.template.md  SECURITY_SCANNING.md  STAGING_CHECKLIST.md  WORKFLOWS.md  WORKFLOWS_EN.md  WORKFLOW_COMPARISON.md  WORKFLOW_FIX_SUMMARY.md  openapi.yaml
e2e-tests/: README.md  (+4 more)
(+265 files in other folders)
